changing links and directory names

--- a/chrona/index.html
+++ b/chrona/index.html
@@ -71,7 +71,7 @@
     <h1>Make 6 Hours of Sleep Feel Like 8</h1>
     <p>Chrona turns any pillow into a Smartpillow that tracks and enhances the quality of your sleep. Chrona's non-invasive pillow topper design delivers a comfortable and invisible experience, anywhere.</p>
     <a href="https://chronasleep.com/learn-more" class="external-btn learn-more-btn">Learn More</a>
-    <a href="https://chronasleep.com/learn-more" class="external-btn about-btn">About Us</a>
+    <a href="https://chronasleep.com/about-us" class="external-btn about-btn">About Us</a>
 </div>
 
 <div class="newsletter-subscribe">
